fix: fix z-index

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -4,6 +4,7 @@
   position: sticky;
   top: 0;
   background-color: #fbfbfb;
+  z-index: 99;
 }
 
 .Navbar nav {
